# ward

./: CMakeLists.txt
Header/: aoa_jpeg.h  bitmap.h  image.h  ward.h
Source/: aoa_jpeg.cpp  bitmap.cpp  image.cpp  main.cpp  ward.cpp
